<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:cardBackgroundColor="@color/chocho">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dasboard"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingLeft="25dp"
            android:paddingTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:paddingTop="65dp"
            android:paddingLeft="25dp"
            android:textColor="@color/black"
            android:textSize="18dp"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="145dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_temperature"
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_marginTop="45dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:text="@string/fragment"
                android:textColor="@color/black"
                android:textSize="30dp" />


        </androidx.cardview.widget.CardView>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="135dp"
                app:cardBackgroundColor="@color/blue2"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="25dp"
                android:id="@+id/cardrelative">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gravity"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:layout_marginTop="65dp"
                    android:layout_marginLeft="25dp"
                    />

                <TextView
                    android:id="@+id/label_gravity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="80dp"
                    android:text="%1$.2f"
                    android:textColor="@color/black"
                    android:textSize="28dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/ic_baseline_downhill_skiing_24" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="135dp"
                android:id="@+id/card_light"
                app:cardBackgroundColor="@color/chocho"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:layout_marginTop="65dp"
                    android:layout_marginLeft="25dp"
                    />

                <TextView
                    android:id="@+id/label_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="%1$.2f"
                    android:textColor="@color/black"
                    android:textSize="28dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginLeft="25dp"
                    android:textStyle="bold"
                    />

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/ic_baseline_bubble_chart_24" />


            </androidx.cardview.widget.CardView>

            
        </LinearLayout>

    </LinearLayout>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:layout_marginTop="550dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_tomaps"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="605dp"
        android:layout_marginRight="25dp"
        android:clickable="true"
        app:cardBackgroundColor="@color/red"
        app:cardCornerRadius="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_baseline_add_alert_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="15dp"
            android:text="@string/alert"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="320dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_baseline_chevron_right_24" />
    </androidx.cardview.widget.CardView>


</RelativeLayout>